<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">coingobbler</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">username</string>
    <string name="coingobbler">CoinGobbler</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>

    <string name="textview">TextView</string>
    <string name="joke">Joke ! -</string>


</resources>
